--- a/html/Login.html
+++ b/html/Login.html
@@ -12,11 +12,11 @@
     <area class="TopBar-area">
     <header class="TopBar">
         <a class="SteamCloneTop" href="Main.html">SteamClone</a>
-        <a class="TopBar-register" href="#">REGISTER</a>
+        <a class="TopBar-register" href="Register.html">REGISTER</a>
     </header>
 
     <!--Background image-->
-    <img class="img-login" src="res/artorias-dark-souls-video-games-wallpaper-preview1.png">
+    <img class="img-login" src="res/LoginBG.png">
     <area class="login-blur">
 
     <!--LoginBar-->
@@ -41,9 +41,9 @@
     <!--BottomBar == footer-->
     <footer>
         <area class="bottomBar">
-        <a class="bottomBar-home"><img src="res/noun-home-5343769 1.png"></a>
-        <a class="bottomBar-library"><img src="res/noun-library-317119 1.png"></a>
-        <a class="bottomBar-cart"><img src="res/noun-cart-3406376 1.png"></a>
+        <a class="bottomBar-home"><img src="res/Home.png"></a>
+        <a class="bottomBar-library"><img src="res/Library.png"></a>
+        <a class="bottomBar-cart"><img src="res/Cart.png"></a>
     </footer>
 </body>
 </html>
