--- a/html/Main.html
+++ b/html/Main.html
@@ -18,7 +18,7 @@
 
     <!--Background image-->
     <div class="img-login"></div>
-    <img class="img-main" src="res/pexels-photo-194511.webp">
+    <img class="img-main" src="res/MainBG.webp">
     <area class="main-blur">
 
     <!--Games-->
@@ -27,9 +27,9 @@
     <!--BottomBar == footer-->
     <area class="bottomBar">
     <footer>
-        <a class="bottomBar-home"><img src="res/noun-home-5343769 1.png"></a>
-        <a class="bottomBar-library"><img src="res/noun-library-317119 1.png"></a>
-        <a class="bottomBar-cart"><img src="res/noun-cart-3406376 1.png"></a>
+        <a class="bottomBar-home"><img src="res/Home.png"></a>
+        <a class="bottomBar-library"><img src="res/Library.png"></a>
+        <a class="bottomBar-cart"><img src="res/Cart.png"></a>
     </footer>
 </body>
 </html>
