--- a/html/Register.html
+++ b/html/Register.html
@@ -16,13 +16,12 @@
     </header>
 
     <!--Background image-->
-    <img class="img-login" src="res/artorias-dark-souls-video-games-wallpaper-preview1.png">
-    <area class="login-blur">
+    <img class="img-login" src="res/RegisterBG.png">
 
     <!--RegisterBar-->
-    <area class="loginRectangle">
-    <h1 class="loginText-username">USERNAME</h1>
-    <div class="login-input-username">
+    <area class="Register-Rectangle">
+    <h1 class="RegisterText-username">USERNAME</h1>
+    <div class="Register-input-username">
         <input type="text" name="q" size="51" class="form-control form-control-lg"
             placeholder="Type username..." />
     </div>
@@ -31,19 +30,13 @@
         <input type="text" name="q" size="51" class="form-control form-control-lg"
             placeholder="Type password..." />
     </div>
-    <input
-        type="submit"
-        name="btnK"
-        value="SIGN-IN"
-        class="login-button-rectangle"
-    />
     
     <!--BottomBar == footer-->
     <footer>
         <area class="bottomBar">
-        <a class="bottomBar-home"><img src="res/noun-home-5343769 1.png"></a>
-        <a class="bottomBar-library"><img src="res/noun-library-317119 1.png"></a>
-        <a class="bottomBar-cart"><img src="res/noun-cart-3406376 1.png"></a>
+        <a class="bottomBar-home"><img src="res/Home.png"></a>
+        <a class="bottomBar-library"><img src="res/Library.png"></a>
+        <a class="bottomBar-cart"><img src="res/Cart.png"></a>
     </footer>
 </body>
 </html>
