--- a/html/Register.html
+++ b/html/Register.html
@@ -12,24 +12,42 @@
     <area class="TopBar-area">
     <header class="TopBar">
         <a class="SteamCloneTop" href="Main.html">SteamClone</a>
-        <a class="TopBar-register" href="Register.html">REGISTER</a>
+        <a class="TopBar-register" href="Login.html">LOGIN</a>
     </header>
 
     <!--Background image-->
     <img class="img-login" src="res/RegisterBG.png">
 
+    <!--Register text-->
+    <h1 class="RegisterText-create">Create an account</h1>
+    <h1 class="RegisterText-tobe">to be our Enemy</h1>
+
     <!--RegisterBar-->
     <area class="Register-Rectangle">
+
     <h1 class="RegisterText-username">USERNAME</h1>
-    <div class="Register-input-username">
+    <div class="Register-input-Username">
         <input type="text" name="q" size="51" class="form-control form-control-lg"
             placeholder="Type username..." />
     </div>
-    <h1 class="loginText-password">PASSWORD</h1>
-    <div class="login-input-password">
+
+    <h1 class="RegisterText-password">PASSWORD</h1>
+    <div class="Register-input-password">
         <input type="text" name="q" size="51" class="form-control form-control-lg"
             placeholder="Type password..." />
     </div>
+
+    <h1 class="RegisterText-confirm">CONFIRM PASSWORD</h1>
+    <div class="Register-input-confirm">
+        <input type="text" name="q" size="51" class="form-control form-control-lg"
+            placeholder="Type password again..." />
+    </div>
+    <input
+        type="submit"
+        name="btnK"
+        value="REGISTER"
+        class="register-button-rectangle"
+    />
     
     <!--BottomBar == footer-->
     <footer>
