--- a/html/Login.html
+++ b/html/Login.html
@@ -42,7 +42,7 @@
     <!--BottomBar == footer-->
     <footer>
         <area class="bottomBar">
-        <a class="bottomBar-home"><img src="res/Home.png"></a>
+        <a class="bottomBar-home" href="Main.html"><img src="res/Home.png"></a>
         <a class="bottomBar-library"><img src="res/Library.png"></a>
         <a class="bottomBar-cart"><img src="res/Cart.png"></a>
     </footer>
