--- a/html/Add-Admin.html
+++ b/html/Add-Admin.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Steam Clone</title>
+        <title>SteamClone</title>
         <link rel = "stylesheet" href="css/addstyle.css">
     </head>
     <body>
@@ -9,8 +9,16 @@
             <a class="pagename">Add</a>
         </header>
         <div class="content">
+
             <div class="border"></div>
             <a class="gamename">GAME NAME...</a>
+
+            <div class="gamepic"></div>
+            <img class="plusicon" src="pic/plus.png"></img>
+            <a class="gamedetail">write detail here</a>
+            <div class="save-button"></div>
+            <a class="save">save</a>
+
         </div>
         <footer class="under">
             
