--- a/html/Add-Admin.html
+++ b/html/Add-Admin.html
@@ -13,15 +13,16 @@
             <div class="border"></div>
             <a class="gamename">GAME NAME...</a>
 
-            <div class="gamepic"></div>
+            <div class="gamepic addpic"></div>
             <img class="plusicon" src="pic/plus.png"></img>
             <a class="gamedetail">write detail here</a>
             <div class="save-button"></div>
             <a class="save">save</a>
 
         </div>
-        <footer class="under">
-            
-        </footer>
+
+        /*can remove*/
+        <footer class="under"></footer>
+
     </body>
 </html>
