--- a/html/Edit-Admin.html
+++ b/html/Edit-Admin.html
@@ -9,8 +9,8 @@
             <a class="pagename">Edit</a>
         </header>
         <div class="content">
-            <a class="fontsizeedit addtext" href="#">Add</a>
-            <a class="fontsizeedit deletetext" href="#">Delete</a>
+            <a class="fontsizeedit addtext" href="Add-Admin.html">Add</a>
+            <a class="fontsizeedit deletetext" href="Delete-Admin.html">Delete</a>
             <a class="fontsizeedit confirmtext" href="#">Confirm & Upload</a>
 
             <div class="border"></div>
@@ -30,9 +30,6 @@
             </div>
 
         </div>
-
-        /*can remove*/
-        <footer class="under"></footer>
 
     </body>
 </html>
