update main link

--- a/html/Main.html
+++ b/html/Main.html
@@ -13,7 +13,7 @@
     <header class="TopBar">
         <a class="SteamCloneSide">SteamClone</a>
         <a class="TopBar-login" href="Login.html">LOGIN</a>
-        <a class="TopBar-register" href="#">REGISTER</a>
+        <a class="TopBar-register" href="Register.html">REGISTER</a>
     </header>
 
     <!--Background image-->
