--- a/html/Edit-Admin.html
+++ b/html/Edit-Admin.html
@@ -11,7 +11,7 @@
         <div class="content">
             <a class="fontsizeedit addtext" href="Add-Admin.html">Add</a>
             <a class="fontsizeedit deletetext" href="Delete-Admin.html">Delete</a>
-            <a class="fontsizeedit confirmtext" href="#">Confirm & Upload</a>
+            <a class="fontsizeedit confirmtext" href="Confirm-Admin.html">Confirm & Upload</a>
 
             <div class="border"></div>
             <a class="maintext">Games</a>
