update detail profile main

--- a/html/Login.html
+++ b/html/Login.html
@@ -18,6 +18,7 @@
     <!--Background image-->
     <img class="img-login" src="res/LoginBG.png">
     <area class="login-blur">
+    <h1 class="login-Text">LOGIN</h1>
 
     <!--LoginBar-->
     <area class="loginRectangle">
@@ -31,6 +32,7 @@
         <input type="text" name="q" size="51" class="form-control form-control-lg"
             placeholder="Type password..." />
     </div>
+    <a href="https://www.youtube.com/watch?v=QxKTOXfT1LQ"><h1 class="loginText-forgot">FORGOT PASSWORD?</h1></a>
     <input
         type="submit"
         name="btnK"
