--- a/html/Main.html
+++ b/html/Main.html
@@ -24,12 +24,22 @@
     <!--Games-->
     <h1 class="Games-text">Games</h1>
 
+    <!--Position การวางเกม-->
+    <a href="Detail.html"><area class="Games-Rectangle-1"></a>
+    <a href="Detail.html"><h1 class="Games-Rectangle-Text-1">name</h1></a>
+    <a href="Detail.html"><area class="Games-Rectangle-2"></a>
+    <a href="Detail.html"><h1 class="Games-Rectangle-Text-2">name</h1></a>
+    <a href="Detail.html"><area class="Games-Rectangle-3"></a>
+    <a href="Detail.html"><h1 class="Games-Rectangle-Text-3">name</h1></a>
+    <a href="Detail.html"><area class="Games-Rectangle-4"></a>
+    <a href="Detail.html"><h1 class="Games-Rectangle-Text-4">name</h1></a>
+
     <!--BottomBar == footer-->
     <area class="bottomBar">
     <footer>
         <a class="bottomBar-home"><img src="res/Home.png"></a>
-        <a class="bottomBar-library"><img src="res/Library.png"></a>
-        <a class="bottomBar-cart"><img src="res/Cart.png"></a>
+        <a class="bottomBar-library" href="Profile.html"><img src="res/Library.png"></a>
+        <a class="bottomBar-cart" href="Cart.html"><img src="res/Cart.png"></a>
     </footer>
 </body>
 </html>
