update login version of web

--- a/html/Profile.html
+++ b/html/Profile.html
@@ -23,7 +23,7 @@
     <area class="Profile-user-circle">
     <h1 class="Profile-text-welcome">Welcome ,</h1>
 
-    /*output username*/
+    <!--output username-->
     <h1 class="Profile-text-username">Anonymous</h1>
 
     <a href="Register.html"><h1 class="Profile-text-register">Are you new here?</h1></a>
@@ -34,14 +34,14 @@
     <h1 class="Games-text">My Games</h1>
 
     <!--Position การวางเกม-->
-    <a href="Detail.html"><area class="Games-Rectangle-1"></a>
+    <!--<a href="Detail.html"><area class="Games-Rectangle-1"></a>
     <a href="Detail.html"><h1 class="Games-Rectangle-Text-1">name</h1></a>
     <a href="Detail.html"><area class="Games-Rectangle-2"></a>
     <a href="Detail.html"><h1 class="Games-Rectangle-Text-2">name</h1></a>
     <a href="Detail.html"><area class="Games-Rectangle-3"></a>
     <a href="Detail.html"><h1 class="Games-Rectangle-Text-3">name</h1></a>
     <a href="Detail.html"><area class="Games-Rectangle-4"></a>
-    <a href="Detail.html"><h1 class="Games-Rectangle-Text-4">name</h1></a>
+    <a href="Detail.html"><h1 class="Games-Rectangle-Text-4">name</h1></a>-->
 
     <!--BottomBar == footer-->
     <area class="bottomBar">
