update cart both version

--- a/html/Cart-Login.html
+++ b/html/Cart-Login.html
@@ -12,16 +12,26 @@
     <area class="TopBar-area">
     <header class="TopBar">
         <a class="SteamCloneSide" href="Main.html">SteamClone</a>
-        <a class="TopBar-login" href="Login.html">LOGIN</a>
-        <a class="TopBar-register" href="Register.html">REGISTER</a>
+
+        <!--output userProfile-->
+        <a class="User-circle" href="Profile-Login.html"><area class="User-circle"></a>
     </header>
     
     <h1 class="Cart-text">YOUR CART</h1>
-    <h1 class="Cart-text-center">You shouldn’t be here.</h1>
-    <a href="Register.html"><h1 class="Cart-register">Are you new here?</h1></a>
-    <h1 class="Cart-text-center-between">if not just</h1>
-    <a href="Login.html"><h1 class="Cart-login">Login</h1></a>
+    <!--Games Cart position-->
+    <area class="Cart-Games-Rec-1">
+    <a class="Cart-Games-Pics-1" href="Detail.html"></a>
+    <h1 class="Cart-Games-Name-1" href="Detail.html">NAME</h1>
 
+    <area class="Cart-Games-PriceRec-1">
+    <h1 class="Cart-Games-PriceText-1">Price : THB</h1>
+
+    <area class="Cart-Games-Rec-2">
+    <a class="Cart-Games-Pics-2" href="Detail.html"></a>
+    <h1 class="Cart-Games-Name-2" href="Detail.html">NAME</h1>
+
+    <area class="Cart-Games-PriceRec-2">
+    <h1 class="Cart-Games-PriceText-2">Price : THB</h1>
 
     <!--BottomBar == footer-->
     <area class="bottomBar">
@@ -29,6 +39,7 @@
         <a class="bottomBar-home" href="Main.html"><img src="res/Home.png"></a>
         <a class="bottomBar-library" href="Profile.html"><img src="res/Library.png"></a>
         <a class="bottomBar-cart" href="Cart.html"><img src="res/Cart.png"></a>
+        <a class="bottomBar-logout" href="Main.html"><img src="res/Logout.png"></a>
     </footer>
 </body>
 </html>
