update cart login

--- a/html/Cart-Login.html
+++ b/html/Cart-Login.html
@@ -25,6 +25,7 @@
 
     <area class="Cart-Games-PriceRec-1">
     <h1 class="Cart-Games-PriceText-1">Price : THB</h1>
+    <img class="Cart-Games-Close-1" src="res/close-symbol.png">
 
     <area class="Cart-Games-Rec-2">
     <a class="Cart-Games-Pics-2" href="Detail.html"></a>
@@ -32,6 +33,7 @@
 
     <area class="Cart-Games-PriceRec-2">
     <h1 class="Cart-Games-PriceText-2">Price : THB</h1>
+    <img class="Cart-Games-Close-2" src="res/close-symbol.png">
 
     <!--BottomBar == footer-->
     <area class="bottomBar">
