--- a/html/Cart-Login.html
+++ b/html/Cart-Login.html
@@ -38,9 +38,9 @@
     <!--BottomBar == footer-->
     <area class="bottomBar">
     <footer>
-        <a class="bottomBar-home" href="Main.html"><img src="res/Home.png"></a>
-        <a class="bottomBar-library" href="Profile.html"><img src="res/Library.png"></a>
-        <a class="bottomBar-cart" href="Cart.html"><img src="res/Cart.png"></a>
+        <a class="bottomBar-home" href="Main-Login.html"><img src="res/Home.png"></a>
+        <a class="bottomBar-library" href="Profile-Login.html"><img src="res/Library.png"></a>
+        <a class="bottomBar-cart"><img src="res/Cart.png"></a>
         <a class="bottomBar-logout" href="Main.html"><img src="res/Logout.png"></a>
     </footer>
 </body>
