--- a/html/Profile-Login.html
+++ b/html/Profile-Login.html
@@ -12,8 +12,6 @@
     <area class="TopBar-area">
     <header class="TopBar">
         <a class="SteamCloneSide" href="Main.html">SteamClone</a>
-        <!--output userProfile-->
-        <a class="User-circle" href="Profile-Login.html"><area class="User-circle"></a>
     </header>
 
     <!--RectangleBG-->
@@ -42,9 +40,9 @@
     <!--BottomBar == footer-->
     <area class="bottomBar">
     <footer>
-        <a class="bottomBar-home" href="Main.html"><img src="res/Home.png"></a>
-        <a class="bottomBar-library" href="Profile.html"><img src="res/Library.png"></a>
-        <a class="bottomBar-cart" href="Cart.html"><img src="res/Cart.png"></a>
+        <a class="bottomBar-home" href="Main-Login.html"><img src="res/Home.png"></a>
+        <a class="bottomBar-library" href="Profile-Login.html"><img src="res/Library.png"></a>
+        <a class="bottomBar-cart" href="Cart-Login.html"><img src="res/Cart.png"></a>
         <a class="bottomBar-logout" href="Main.html"><img src="res/Logout.png"></a>
     </footer>
 </body>
