--- a/html/Main-Login.html
+++ b/html/Main-Login.html
@@ -38,8 +38,8 @@
     <area class="bottomBar">
     <footer>
         <a class="bottomBar-home"><img src="res/Home.png"></a>
-        <a class="bottomBar-library" href="Profile.html"><img src="res/Library.png"></a>
-        <a class="bottomBar-cart" href="Cart.html"><img src="res/Cart.png"></a>
+        <a class="bottomBar-library" href="Profile-Login.html"><img src="res/Library.png"></a>
+        <a class="bottomBar-cart" href="Cart-Login.html"><img src="res/Cart.png"></a>
         <a class="bottomBar-logout" href="Main.html"><img src="res/Logout.png"></a>
     </footer>
 </body>
