--- a/html/Main.html
+++ b/html/Main.html
@@ -17,6 +17,7 @@
     </header>
 
     <!--Background image-->
+    <area class="BG-Rec">
     <div class="img-login"></div>
     <img class="img-main" src="res/MainBG.webp">
     <area class="main-blur">
